--- a/sections/hero3.html
+++ b/sections/hero3.html
@@ -80,6 +80,32 @@
                         <img src="/elements/Frame.svg" alt="Search icon" width="20" height="20">
                     </button>
 
+                    <div class="dropdown">
+                        <button class="btn btn-outline-light dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
+                            <img src="/flags/Flags.svg" alt="Language flag" class="language-flag">
+                            <span class="language-label">AZE</span>
+                            <img src="/elements/arrow-down.svg" alt="Arrow down" class="dropdown-arrow-icon">
+                        </button>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <button type="button" class="dropdown-item" aria-current="true" data-lang="AZE"
+                                    data-flag="/flags/Flags.svg" data-rect-flag="/flags/Flags.svg">
+                                    <img src="/flags/Flags.svg" alt="Azerbaijan flag" class="dropdown-flag-icon">
+                                    <span>AZE</span>
+                                    <img src="/selected-ar/Frame.svg" alt="" class="dropdown-selected-indicator">
+                                </button>
+                            </li>
+                            <li>
+                                <button type="button" class="dropdown-item" data-lang="USA" data-flag="/tedris/usa.png"
+                                    data-rect-flag="/tedris/usa.png">
+                                    <img src="/tedris/usa.png" alt="USA flag" class="dropdown-flag-icon">
+                                    <span>USA</span>
+                                    <img src="/selected-ar/Frame.svg" alt="" class="dropdown-selected-indicator">
+                                </button>
+                            </li>
+                        </ul>
+                    </div>
                     <button class="cta-button" type="button">
                         <span data-i18n-key="nav.cta">Müraciət et</span>
                     </button>
